# 1D-Air-Flow-Simulation

./: .gitignore  CMakeLists.txt  Edge_1.json  Edge_2.json  Edge_3.json  Edge_4.json  Edge_5.json  Edge_6.json  Edge_7.json  Edge_8.json  Network.json  Q3_edge.json  Q4_edge.json  README.md  graph.sh  network.cpp  network.hpp  network_debug.cpp  network_hybrid.cpp  network_hybrid.hpp  network_par.cpp  network_par.hpp  network_par_debug.cpp  sequential.cpp  vertex_graph.sh
config/: Big_Network.json  Edge_1.json  Edge_2.json  Edge_4.json  Edge_5.json  Edge_6.json
examples/: Edge_3.json  Network.json  main.cpp  network_hybrid_hc.cpp  sequential.cpp  sequential_omp_for.cpp  sequential_omp_sections.cpp  sequential_without_split.cpp
hawk/: hawk.login_node.likwid-topology-c.txt  hawk.login_node.numactl-hardware.txt  hawk.numactl-hardware.txt  hawk.sequential.gcc-O0  hawk.sequential.gcc-O1  hawk.sequential.gcc-O2  hawk.sequential.gcc-O3
utils/: graph  json_graph.cpp  modify-keys.awk  random_graph.cpp
